--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="./models/drawable-object.class.js"></script>
     <script src="./models/movable-object.class.js"></script>
+    <script src="./models/status-bar.class.js"></script>
+    <script src="./models/status-bar-coins.class.js"></script>
+    <script src="./models/status-bar-bottle.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/chicken.class.js"></script>
@@ -14,20 +17,23 @@
     <script src="./models/clouds.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/level.class.js"></script>
+    <script src="./models/throwable-object.class.js"></script>
     <script src="./models/endboss.class.js"></script>
     <script src="./Levels/level1.js"></script>
     <script src="./js/game.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Economica:ital,wght@0,400;0,700;1,400;1,700&family=Fredoka:wght@300..700&family=Gidole&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&family
+ =Roboto:ital,wght@0,100..900;1,100..900&family=Viga&display=swap" rel="stylesheet">
  
-</head>
+</head> 
+
 <body onload="init()">
 
-    <h1>El Pollo Loco</h1>
-
-    <canvas id="canvas" width="720" height="480">
-
-    </canvas>
-
-</head>
+        <h1>El Pollo Loco</h1>
+        
+        <canvas id="canvas" width="720" height="480"></canvas>
+    </div>
 
 </body>
 </html>
