Mobile view adjusted

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/You won, you lost/images.icon.png">
+
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="style.css">
 
@@ -51,6 +53,19 @@
                     </div>
                     <button class="closePopup">X</button>
             </div>
+
+            <div id="mobile-controls">
+                <div class="left-controls">
+                    <button id="btn-left">&lt;</button>
+                    <button id="btn-right">&gt;</button>
+                </div>
+            
+                <div class="right-controls">
+                    <button id="btn-jump">X</button>
+                    <button id="btn-throw">T</button>
+                </div>
+            </div>
+            
 
             <div id="popup2" class="hidden">
                  <h2>Impressum</h2>
